--- a/public/css/main.css
+++ b/public/css/main.css
@@ -279,6 +279,36 @@ nav ul.dropdown-list {
   color: var(--dark-gray);
 }
 
+.home {
+  background: linear-gradient(106deg, rgb(217, 165, 208) 53%, rgb(238, 196, 231) 100%);
+  display: flex;
+  height: 500px;
+  align-items: center;
+  justify-content: center;
+}
+
+.home__container {
+  text-align: center;
+}
+
+.home__container h3 {
+  font-size: 1rem;
+}
+
+.home__container h1, .home__container h3 {
+  margin: 30px 0;
+}
+
+.home__container a {
+  background-color: #FFFFFF;
+  -webkit-box-shadow: 8px 8px 22px -6px rgba(0, 0, 0, 0.75);
+  -moz-moz-box-shadow: 8px 8px 22px -6px rgba(0, 0, 0, 0.75);
+  box-shadow: 8px 8px 22px -6px rgba(0, 0, 0, 0.75);
+  border-radius: 5px;
+  padding: 10px;
+  color: #A2A0A0;
+}
+
 body {
   background: #FFFFFF;
   color: white;
