--- a/resources/sass/main.scss
+++ b/resources/sass/main.scss
@@ -4,10 +4,13 @@
 @import 'variables/colors';
 @import 'variables/breakpoints';
 @import 'variables/typography';
+@import 'variables/shadows';
+@import 'variables/border_radius';
 
 //components
 
 @import 'components/navbar';
+@import 'components/home';
 
 
 body{
