--- a/resources/sass/variables/_colors.scss
+++ b/resources/sass/variables/_colors.scss
@@ -1,2 +1,3 @@
 $color-gray-1:#A2A0A0;
 $color-white-1:#FFFFFF;
+$color-pink-deg-1:linear-gradient(106deg, rgba(217,165,208,1) 53%, rgba(238,196,231,1) 100%);
