component servicios sobre_mi tarifas

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,6 +1,7 @@
+@import url(https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap);
 @font-face {
   font-family: "Helvetica Light";
-  src: url("/imports/typography/HelveticaNeue_Light.ttf") format("truetype");
+  src: url("/imports/typography/HelveticaNeue-Light.ttf") format("truetype");
 }
 * {
   padding: 0;
@@ -25,7 +26,7 @@
 
 .nav-wrapper {
   background: #FFFFFF;
-  font-family: "Helvetica Light", sans-serif;
+  font-family: "Roboto", sans-serif;
   display: flex;
   align-items: center;
   margin: auto;
@@ -309,10 +310,203 @@ nav ul.dropdown-list {
   color: #A2A0A0;
 }
 
+.lo_que_hago {
+  position: relative;
+}
+
+.lo_que_hago__container {
+  background: transparent;
+  color: #A2A0A0;
+}
+
+.lo_que_hago__container p {
+  text-align: justify;
+  width: 100%;
+  margin: 0 auto;
+}
+
+.lo_que_hago__container span {
+  color: #D9A5D0;
+}
+
+.lo_que_hago img {
+  position: absolute;
+  right: 0;
+  top: 0;
+  width: 100%;
+  z-index: -1;
+}
+
+@media only screen and (min-width: 768px) {
+  .lo_que_hago {
+    background: linear-gradient(to left, rgba(255, 255, 255, 0) 0%, rgb(255, 255, 255) 60%), url("/img/lo_que_hago/background.jpg") no-repeat right;
+  }
+
+  .lo_que_hago__container p {
+    text-align: justify;
+    margin: 0 0;
+    width: 60%;
+  }
+}
+.servicios__container h1 {
+  color: #A2A0A0;
+  text-align: right;
+}
+
+.servicios__boxes {
+  -moz-column-gap: 10px;
+       column-gap: 10px;
+  row-gap: 30px;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+}
+
+.servicios__box__1 {
+  background: url("/img/servicios/conducta.jpg") no-repeat right;
+}
+
+.servicios__box__2 {
+  background: url("/img/servicios/ansiedad.jpg") no-repeat right;
+}
+
+.servicios__box__3 {
+  background: url("/img/servicios/fracaso.jpg") no-repeat right;
+}
+
+.servicios__box__4 {
+  background: url("/img/servicios/depresion.jpg") no-repeat right;
+}
+
+.servicios__box__5 {
+  background: url("/img/servicios/miedos.jpg") no-repeat right;
+}
+
+.servicios__box__6 {
+  background: url("/img/servicios/comida.jpg") no-repeat right;
+}
+
+.servicios__box {
+  border-radius: 5px;
+  padding: 20px;
+  width: 100%;
+}
+
+.servicios__box h2 {
+  font-size: 2rem;
+  background: rgba(255, 255, 255, 0);
+  margin-bottom: 50px;
+}
+
+.servicios__box p {
+  background-color: rgba(0, 0, 0, 0.3);
+  padding: 5px;
+  text-align: justify;
+}
+
+@media only screen and (min-width: 768px) {
+  .servicios__boxes {
+    flex-direction: row;
+  }
+
+  .servicios__box {
+    padding: 50px;
+    width: 49%;
+  }
+}
+.sobre_mi h1 {
+  color: #A2A0A0;
+}
+
+.sobre_mi p {
+  color: #A2A0A0;
+  text-align: justify;
+}
+
+.sobre_mi p span {
+  color: #D9A5D0;
+  text-align: justify;
+}
+
+@media only screen and (min-width: 1025px) {
+  .sobre_mi {
+    background: linear-gradient(to right, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0) 30%, rgb(255, 255, 255) 52%), url("/img/sobre_mi/background.jpg") no-repeat left;
+  }
+
+  .sobre_mi h1 {
+    color: #FFFFFF;
+  }
+
+  .sobre_mi p {
+    margin-left: 50%;
+    width: 550px;
+  }
+}
+.tarifas h1 {
+  color: #A2A0A0;
+  text-align: right;
+}
+
+.tarifas__boxes {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  -moz-column-gap: 10px;
+       column-gap: 10px;
+  margin: 0 auto;
+  row-gap: 10px;
+}
+
+.tarifas__box__1 {
+  background: url("/img/tarifas/completa.jpg") no-repeat;
+}
+
+.tarifas__box__2 {
+  background: url("/img/tarifas/media.jpg") no-repeat;
+}
+
+.tarifas__box__3 {
+  background: url("/img/tarifas/online.jpg") no-repeat;
+}
+
+.tarifas__box {
+  background-size: cover;
+  border-radius: 5px;
+  margin: auto;
+  width: 100%;
+}
+
+.tarifas__box {
+  text-align: center;
+  padding: 50px;
+}
+
+.tarifas__box h1 {
+  color: #FFFFFF;
+  font-family: "Roboto", sans-serif;
+  font-size: 4rem;
+  text-align: center;
+  margin: 0;
+}
+
+.tarifas__box h2 {
+  background-color: rgba(0, 0, 0, 0.3);
+  margin-bottom: 20px;
+}
+
+@media only screen and (min-width: 768px) {
+  .tarifas__boxes {
+    flex-direction: row;
+  }
+
+  .tarifas__box {
+    width: 33.3333333333%;
+  }
+}
 body {
   background: #FFFFFF;
   color: white;
-  font-family: "Helvetica Light", sans-serif;
+  font-family: "Roboto", sans-serif;
 }
 
 section {
@@ -339,6 +533,16 @@ li {
   list-style: none;
 }
 
+h1 {
+  font-family: "Helvetica Light", sans-serif;
+  font-size: 3rem;
+  margin-bottom: 50px;
+}
+
+p {
+  font-size: 1rem;
+}
+
 .myContainer {
   margin: auto;
   max-width: 1200px;
@@ -350,6 +554,14 @@ li {
   border-radius: 4px;
   background-color: transparent;
   color: white;
+  transition: all 0.2s;
+}
+
+.btn2 {
+  border-radius: 4px;
+  background-color: #D9A5D0;
+  color: #FFFFFF;
+  padding: 10px;
   transition: all 0.2s;
 }
 
