--- a/resources/sass/components/_navbar.scss
+++ b/resources/sass/components/_navbar.scss
@@ -21,7 +21,7 @@
 
 .nav-wrapper {
     background: $color-white-1;
-    font-family: $tg-helvetica-light;
+    font-family: $tg-roboto;
     display: flex;
     align-items: center;
     margin: auto;
