--- a/resources/sass/variables/_typography.scss
+++ b/resources/sass/variables/_typography.scss
@@ -1,6 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
+
 @font-face {
    font-family: 'Helvetica Light';
-   src: url("/imports/typography/HelveticaNeue_Light.ttf") format("truetype");
+   src: url("/imports/typography/HelveticaNeue-Light.ttf") format("truetype");
 }
 
 $tg-helvetica-light: 'Helvetica Light', sans-serif;
+$tg-roboto: 'Roboto', sans-serif;
