--- a/resources/sass/components/_home.scss
+++ b/resources/sass/components/_home.scss
@@ -1,5 +1,5 @@
 .home{
-  background: $color-pink-deg-1;
+  background: linear-gradient(to right, $color-pink-dark 0%, $color-pink-light 70% , rgba(255,255,255,1)100%), no-repeat left;
   display: flex;
   height: 500px;
   align-items: center;
@@ -16,16 +16,4 @@
 
 .home__container h1, .home__container h3{
   margin:30px 0;
-}
-
-.home__container a{
-  background-color: $color-white-1;
-  -webkit-box-shadow: $shadow-1;
-  -moz-moz-box-shadow: $shadow-1;
-  box-shadow: $shadow-1;
-  -webkit-border-radius: 5px;
--moz-border-radius: 5px;
-border-radius: 5px;
-  padding: 10px;
-  color: $color-gray-1;
 }
