--- a/resources/sass/main.scss
+++ b/resources/sass/main.scss
@@ -15,6 +15,8 @@
 @import 'components/servicios';
 @import 'components/sobre_mi';
 @import 'components/tarifas';
+@import 'components/contacto';
+@import 'components/footer';
 
 
 body{
@@ -63,11 +65,11 @@ p{
   width: 100%;
 }
 
-.btn{
-  border-color: white;
+.btn1{
   border-radius:4px;
-  background-color: transparent;
-  color:white;
+  background-color: $color-white-1;
+  color:$color-gray-1;
+  padding: 10px;
   transition: all .2s;
 }
 
@@ -77,9 +79,4 @@ p{
   color:$color-white-1;
   padding: 10px;
   transition: all .2s;
-}
-
-.btn:hover{
-  background-color: white;
-  color:black;
 }
