--- a/resources/sass/components/_create_entry.scss
+++ b/resources/sass/components/_create_entry.scss
@@ -1,7 +1,13 @@
 .section__create_entry form{
+  color: $color-gray-1;
   margin-top: 100px;
 }
 
 .section__create_entry input, .section__create_entry textarea{
   margin-top: 50px;
+}
+
+.section__create_entry textarea{
+  width: 60%;
+  height: 500px;
 }
