--- a/resources/sass/components/_blog.scss
+++ b/resources/sass/components/_blog.scss
@@ -1,3 +1,7 @@
+.blog{
+  background: linear-gradient(to bottom right, #D9A5D0 0%, #EEC4E7 11%, rgb(255, 255, 255) 28%), no-repeat left;
+}
+
 .blog__title{
   color: $color-gray-1;
 }
@@ -24,16 +28,23 @@
   width: 100%;
 }
 
+.blog__box img{
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+  width: 100%;
+}
+
 .blog__box h2{
   font-size: 2rem;
   background: rgb(255,255,255,0);
   color: #555555;
   margin-bottom: 50px;
-  margin-top: -100px;
+  margin-top: 50px;
 }
 
 .blog__box p{
-  background-color: rgb(0,0,0,.3);
+  color: $color-gray-1;
   height: 100px;
   padding:5px;
   overflow: hidden;
