--- a/resources/sass/components/_lo_que_hago.scss
+++ b/resources/sass/components/_lo_que_hago.scss
@@ -28,7 +28,8 @@
 @media #{$breakpoints-medium} {
 
 .lo_que_hago{
-  background: linear-gradient(to left, rgba(255,255,255,0)0% , rgba(255,255,255,1)60%), url("/img/lo_que_hago/background.jpg") no-repeat right; 
+  background: linear-gradient(to left, rgba(255,255,255,0)0% , rgba(255,255,255,1)60%), url("/img/lo_que_hago/background.jpg") no-repeat 52%;
+  padding: 170px;
 }
 
 
