--- a/public/css/main.css
+++ b/public/css/main.css
@@ -300,6 +300,21 @@ nav ul.dropdown-list {
   margin: 30px 0;
 }
 
+@media only screen and (min-width: 768px) {
+  .home {
+    background: url("/img/home/background.jpeg") no-repeat;
+    background-size: cover;
+    height: 800px;
+  }
+
+  .home__container {
+    background: rgba(0, 0, 0, 0.3);
+  }
+
+  .home__container div {
+    margin-bottom: 15px;
+  }
+}
 .lo_que_hago {
   position: relative;
 }
