--- a/resources/sass/components/_home.scss
+++ b/resources/sass/components/_home.scss
@@ -17,3 +17,20 @@
 .home__container h1, .home__container h3{
   margin:30px 0;
 }
+
+@media #{$breakpoints-medium} {
+
+.home{
+  background: url("/img/home/background.jpeg") no-repeat;
+  background-size: cover;
+  height: 800px;
+}
+
+.home__container{
+  background: rgba(black, 0.3);
+}
+
+.home__container div{
+  margin-bottom: 15px;
+}
+}
