--- a/resources/sass/components/_sobre_mi.scss
+++ b/resources/sass/components/_sobre_mi.scss
@@ -1,3 +1,16 @@
+.sobre_mi{
+  position: relative;
+}
+
+.sobre_mi__background{
+  display: none;
+
+}
+.sobre_mi__container{
+  display:flex;
+  flex-direction: column;
+}
+
 .sobre_mi h1{
   color: $color-gray-1;
 }
@@ -18,19 +31,39 @@
 @media #{$breakpoints-medium} {
 
 .sobre_mi img{
-  display: none;
+  //display: none;
 }
 
 }
 
 @media #{$breakpoints-large} {
 
-.sobre_mi{
-  background: linear-gradient(to right, rgba(255,255,255,0)23% , rgba(255,255,255,1)57%), url("/img/sobre_mi/background.jpg") no-repeat left;
-  background-size: cover;
-  background-position: -103px 0px;
-  height:2000px;
+  .sobre_mi{
+    padding-top:0;
+  }
 
+.sobre_mi__background{
+  display: inline;
+  height: 100%;
+  position: absolute;
+  object-fit: cover;
+  width: 50vw !important;
+  z-index: -5;
+
+}
+
+.sobre_mi__container{
+  flex-direction: row;
+}
+
+
+.sobre_mi__left, .sobre_mi__right{
+  
+  width: 50%;
+}
+
+.sobre_mi__right{
+  background: $color-white-1;
 }
 
 .sobre_mi h1{
@@ -38,8 +71,8 @@
 }
 
 .sobre_mi p{
-  margin-left: 50%;
-  width: 539px;
+  margin: 50px;
+
 }
 
 }
